--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,21 +1,26 @@
 <%# navigation styled for Bootstrap 3.0 %>
 <div class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<%= link_to 'Purity', root_path, class: 'navbar-brand' %>
-		</div>
-		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-			</ul>
-		</div>
-	</div>
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <%= link_to 'Purity', root_path, class: 'navbar-brand' %>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <% if user_signed_in? %>
+                    <%= active_link_to destroy_user_session_path, :method=>'delete', :wrap_tag => :li do %> <i class="fa fa-sign-out"></i> Sign out <% end %>
+                <% else %>
+                    <%= active_link_to new_user_session_path, :wrap_tag => :li do %> <i class="fa fa-sign-in"></i> Sign in <% end %>
+                <% end %>
+            </ul>
+        </div>
+    </div>
 </div>
 
