--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,10 @@
 			<%= f.email_field :email, :autofocus => true, class: 'form-control input-lg' %>
 		</div>
 		<div class="form-group">
+			<%= f.label :nickname, class: "control-label" %>
+			<%= f.text_field :nickname, :autofocus => true, class: 'form-control input-lg' %>
+		</div>
+		<div class="form-group">
 			<%= f.label :password, class: "control-label" %>
 			<%= f.password_field :password, class: 'form-control input-lg', autocomplete: 'off' %>
 		</div>
