--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,6 +15,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
+                    <li><a href='#'><i class="fa fa-user"></i> <%= current_user.nickname.present? ? current_user.nickname : "Logged in" %></a></li>
                     <%= active_link_to destroy_user_session_path, :method=>'delete', :wrap_tag => :li do %> <i class="fa fa-sign-out"></i> Sign out <% end %>
                 <% else %>
                     <%= active_link_to new_user_session_path, :wrap_tag => :li do %> <i class="fa fa-sign-in"></i> Sign in <% end %>
